--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "monaco-editor-nls": "^1.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-monaco": "^1.1.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -25,6 +27,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "monaco-editor-esm-webpack-plugin": "^1.0.1",
     "node-sass": "^4.9.0",
     "prettier": "^1.18.2",
     "sass-loader": "^7.1.0",
