fix: pwa name, local avatar
v1.0.1

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "miriraji",
-  "short_name": "miriraji",
+  "name": "米粒垃圾工具箱",
+  "short_name": "米粒垃圾",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
